--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   "devDependencies": {
     "@aws-cdk/assert": "^1.116.0",
     "@types/jest": "^26.0.10",
-    "@types/node": "10.17.27",
-    "aws-cdk": "1.116.0",
+    "@types/node": "^10.17.27",
+    "aws-cdk": "^1.116.0",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
     "ts-node": "^9.0.0",
-    "typescript": "~3.9.7"
+    "typescript": "^3.9.7"
   },
   "dependencies": {
     "@aws-cdk/aws-apigatewayv2": "^1.116.0",
@@ -29,7 +29,7 @@
     "@aws-cdk/aws-lambda-nodejs": "^1.116.0",
     "@aws-cdk/aws-s3": "^1.116.0",
     "@aws-cdk/aws-s3-deployment": "^1.116.0",
-    "@aws-cdk/core": "1.116.0",
+    "@aws-cdk/core": "^1.116.0",
     "source-map-support": "^0.5.16"
   }
 }
