--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
 SKIP_PREFLIGHT_CHECK=true
-REACT_APP_API_URL=https://n8n09rypng.execute-api.us-east-1.amazonaws.com
+REACT_APP_API_URL=https://lx3908pgi5.execute-api.us-east-1.amazonaws.com
